Fix post details page on mobile

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -398,3 +398,10 @@ div.footer-archive a {
 div.footer-archive i {
     padding-right: 3px;
 }
+
+
+@media (max-width: 767px) {
+      .text-xs-center {
+              text-align: center;
+       }
+    }
